# imu-stabilization-code

./: .gitignore
data_fetch/playground/com-reader/: reader_test.cpp
opencv-test/: main.cpp
stabilizer-prototype/: CMakeLists.txt  grid.pptx  main.cpp
stabilizer-prototype/cameracalibrator/: calibrator.cpp
stabilizer-prototype/datacollector/: com_device.cpp  com_device.h  data_collector.cpp  data_collector.h  fixed_size_buffer.h  sensor_device.cpp  sensor_device.h  win32utils.cpp  win32utils.h  witsdk.h  witsdk_constants.h
stabilizer-prototype/datacollectorold/: ComDevice.cpp  ComDevice.h  data_collector.h  witsdk.cpp
stabilizer-prototype/stabilizer-prototype-py/: axis_remapping.py  delay_measure.py  forge_sample.py  function_menu.py  gyro_data.py  homography.py  interpolators.py  numberstore.py  script-grapher.py  script-roi-grapher.py  test.py  tracker.py  vreader.py
stabilizer-prototype/stabilizer-prototype-py/camera_calibrator/: image_collector.py  script-calibrator.py
stabilizer-prototype/stabilizer-prototype-py/data_analysis/: gyro.csv  gyro.xlsx
stabilizer-prototype/stabilizer-prototype-py/filters/: __init__.py  angular_drift_removal_filter.py  butterworth_filter.py  filter_base.py  moving_average_filter.py  null_filter.py
stabilizer-prototype/stabilizer-prototype-py/sample_forger/: sample_forger.py
stabilizer-prototype/utils/: homography.cpp  homography.h  quaternion.cpp  quaternion.h  quaternion_cv.h
